--- a/demos/facial_analysis.html
+++ b/demos/facial_analysis.html
@@ -80,6 +80,7 @@
           function getStarted(){
             name=document.getElementById("name").value;
             self.location.href= location.href.replace('#slide=2','#slide=3');
+            window.ws.navigateOnScroll=false;
           }
           </script>
 
