--- a/demos/facial_analysis_.html
+++ b/demos/facial_analysis_.html
@@ -399,7 +399,7 @@
             <input type="radio" id="op3" name="drone" value="op3" checked> <label for="op2">모공</label> <input type="radio" id="op4" name="drone" value="op4" checked> <label for="op2">거칠기</label> <input type="radio" id="op5" name="drone" value="op5" checked> <label for="op2">주름</label></span>
           <div id="chartContainer" style="height: 300px; width: 100%;">
           </div>
-          <div style="width:800px">
+          <div>
     <canvas id="myChart"></canvas>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
