--- a/demos/facial_analysis_.html
+++ b/demos/facial_analysis_.html
@@ -337,17 +337,15 @@
           </pre>
             <hr>
           <pre>
-            <b>수분</b> <span id="res01"></span>
+            수분 <span id="res01"></span>
             유분 <span id="res02"></span>
             모공 크기 <span id="res03"></span>
             거칠기 <span id="res04"></span>
             주름 <span id="res05"></span>
             오늘의 피부점수
             <nav class="aligncenter">
-              <ul>
-                <li><a href="#" class="button radius" title="Button"><strong>&nbsp;결과 공유&nbsp;&rsaquo; </strong></a></li>
-                <li><a href="#" class="button radius" ><strong>&nbsp;분석 내용&nbsp;&rsaquo;</strong></a></li>
-              </ul>
+                <a href="#" class="button radius" title="Button"><strong>&nbsp;결과 공유&nbsp;&rsaquo; </strong></a>
+                <a href="#" class="button radius" ><strong>&nbsp;분석 내용&nbsp;&rsaquo;</strong></a>
             </nav>
 
           </pre>
@@ -397,8 +395,8 @@
             <pre>
             <span><input type="radio" id="op1" name="drone" value="op1" > <label for="op1">수분</label> <input type="radio" id="op2" name="drone" value="op2" checked> <label for="op2">유분</label>
             <input type="radio" id="op3" name="drone" value="op3" checked> <label for="op2">모공</label> <input type="radio" id="op4" name="drone" value="op4" checked> <label for="op2">거칠기</label> <input type="radio" id="op5" name="drone" value="op5" checked> <label for="op2">주름</label></span>
-          <div id="chartContainer" style="height: 300px; width: 100%;">
-          </div>
+          <!--<div id="chartContainer" style="height: 300px; width: 100%;">
+          </div> -->
           <div>
     <canvas id="myChart"></canvas>
 </div>
