--- a/demos/facial_analysis1.html
+++ b/demos/facial_analysis1.html
@@ -152,6 +152,7 @@
         <h3 class="text-landing"><b>현재 피부상태 분석</b></h3>
         <p > 사진촬영을 통해 더욱 정확한 분석을 받아보세요.</p>
         <strong><a id="swipeNext"></a></strong>
+        <a onclick="fun()">분석하기</button>
         <br>
         <br>
         <pre id="con">
