--- a/demos/facial_analysis1.html
+++ b/demos/facial_analysis1.html
@@ -100,8 +100,8 @@
             if (!('url' in window) && ('webkitURL' in window)) {
               window.URL = window.webkitURL;
             }
-            var imgUrl=URL.createObjectURL(e.files[0]);
-            document.getElementById("pic2").src=imgUrl;
+            //var imgUrl=URL.createObjectURL(e.files[0]);
+            //document.getElementById("pic2").src=imgUrl;
 
             const imageUpload = document.getElementById('imageUpload')
 
