--- a/demos/facial_analysis1.html
+++ b/demos/facial_analysis1.html
@@ -146,6 +146,7 @@
             }
 
             document.getElementById("swipeNext").innerHTML='다음으로';
+            self.location.href="https://heedojung92.github.io/MZProject/demos/facial_analysis00"
             //document.getElementById("swipeNext").href=location.href.replace('#slide=3','#slide=4');
           }
         </script>
