--- a/demos/facial_analysis00.html
+++ b/demos/facial_analysis00.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type='text/css' media='all' href="../static/css/webslides.css">
     <style>
         body {
             margin:0; padding:0; width:100vw; height:100vh;
