--- a/demos/facial_analysis00.html
+++ b/demos/facial_analysis00.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type='text/css' media='all' href="../static/css/webslides.css">
     <style>
         body {
-            margin:0; padding:0; width:100vw; height:100vh;
+            margin:0; padding:0;
             display:flex; justify-content:center; align-items:center; flex-direction:column;
         }
         canvas {
