--- a/demos/facial_analysis1.html
+++ b/demos/facial_analysis1.html
@@ -120,6 +120,7 @@
 
                 imageUpload.addEventListener('change', async () => {
 
+
                     // 사진을 화면에 표시함
                     const image = await faceapi.bufferToImage(imageUpload.files[0])
                     container.appendChild(image)
@@ -127,7 +128,7 @@
                     // canvas를 초기화 한다
                     const canvas = faceapi.createCanvasFromMedia(image)
                     container.appendChild(canvas)
-                    const displaySize = {width: image.width, height: image.height}
+                    const displaySize = {width: image.width/5, height: image.height/5}
                     faceapi.matchDimensions(canvas, displaySize)
 
                     // 사진에서 얼굴을 식별한다.
@@ -146,7 +147,7 @@
             }
 
             document.getElementById("swipeNext").innerHTML='다음으로';
-            self.location.href="https://heedojung92.github.io/MZProject/demos/facial_analysis00"
+            //self.location.href="https://heedojung92.github.io/MZProject/demos/facial_analysis00"
             //document.getElementById("swipeNext").href=location.href.replace('#slide=3','#slide=4');
           }
         </script>
