--- a/demos/facial_analysis00.html
+++ b/demos/facial_analysis00.html
@@ -19,6 +19,9 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+  <h3 class="text-landing"><b>현재 피부상태 분석</b></h3>
+  <p > 사진촬영을 통해 더욱 정확한 분석을 받아보세요.</p>
+  <hr>
     <input type="file" id="imageUpload">
 </body>
 </html>
