--- a/demos/facial_analysis1.html
+++ b/demos/facial_analysis1.html
@@ -87,7 +87,7 @@
 
         </section>
         <section>
-          <div class="wrap size-50">
+          <div>
             <style>
             #swipeNext{
               color: red
