--- a/demos/facial_analysis1.html
+++ b/demos/facial_analysis1.html
@@ -87,7 +87,7 @@
 
         </section>
         <section>
-          <div>
+          <div id="con">
             <style>
             #swipeNext{
               color: red
@@ -157,10 +157,9 @@
         <a onclick="fun()">분석하기</button>
         <br>
         <br>
-        <pre id="con">
           <!--<label className="input-file-button" for="camera">사진 촬영</label>-->
           <input type="file" id="imageUpload">
-        </pre>
+
         </div>
         <br><br><br><br><br>
         </section>
