--- a/demos/facial_analysis1.html
+++ b/demos/facial_analysis1.html
@@ -116,7 +116,7 @@
                 // Canvas container 생성
                 const container = document.createElement('div')
                 container.style.position = 'relative'
-                document.getElementById("con").appendChild(container)
+                //document.getElementById("con").appendChild(container)
 
                 imageUpload.addEventListener('change', async () => {
 
