--- a/demos/facial_analysis00.html
+++ b/demos/facial_analysis00.html
@@ -16,7 +16,7 @@
         }
     </style>
     <script defer src="face-api.min.js"></script>
-  <!--  <script defer src="script.js"></script> -->
+    <script defer src="script.js"></script>
     <script>
     const imageUpload = document.getElementById('imageUpload')
 
