--- a/demos/facial_detection.html
+++ b/demos/facial_detection.html
@@ -23,8 +23,11 @@
   <h3 class="text-landing"><b>현재 피부상태 분석</b></h3>
   <p > 사진촬영을 통해 더욱 정확한 분석을 받아보세요.</p>
   <hr>
+  <pre>
   <div id="imgDiv">
   </div>
+  <br><br><br>
   <input type="file" id="imageUpload">
+</pre>
 </body>
 </html>
