--- a/demos/facial_analysis_.html
+++ b/demos/facial_analysis_.html
@@ -79,6 +79,8 @@
           function getStarted(){
             name=document.getElementById("name").value;
             var filter = "win16|win32|win64|mac"
+            self.location.href="https://heedojung92.github.io/MZProject/demos/facial_detection.html";
+            /*
             if(navigator.platform){
               if(0>filter.indexOf(navigator.platform.toLowerCase())){
                 self.location.href= location.href.replace('#slide=2','#slide=3');
@@ -86,6 +88,7 @@
                 self.location.href="https://heedojung92.github.io/MZProject/demos/facial_detection.html";
               }
             }
+            */
 
           }
           var dataPoints=[];
