--- a/demos/kakaoTest.html
+++ b/demos/kakaoTest.html
@@ -14,7 +14,7 @@
     <script type='text/javascript'>
         //<![CDATA[
         // 사용할 앱의 JavaScript 키를 설정해 주세요.
-        Kakao.init('YOUR KEY NUMBER');
+        Kakao.init('7e8dd841a443e18cecc2b3e781124024');
         // 카카오 로그인 버튼을 생성합니다.
         Kakao.Auth.createLoginButton({
             container: '#kakao-login-btn',
