--- a/demos/kakaoTest0.html
+++ b/demos/kakaoTest0.html
@@ -26,6 +26,6 @@
       }
       //]]>
     </script>
-    <a onclick="dofun(this)"> </a>
+    <a onclick="dofun(this)"> qwefqwef</a>
 </body>
 </html>
