--- a/demos/kakaoTest0.html
+++ b/demos/kakaoTest0.html
@@ -14,9 +14,9 @@
         Kakao.init('7e8dd841a443e18cecc2b3e781124024');
         // 카카오 로그인 버튼을 생성합니다.
         Kakao.API.request({
-          url: '/v2/vision/text/ocr',
+          url: '/v2/vision/face/detect',
           data: {
-            image : 'https://lh3.googleusercontent.com/proxy/O0gdtgbbL1_AI9IOibismKoPz-tgZOt1tRpuY4HvXsTh1_iXshi2dlt8A496ktxq_pCwtlmgIVXWBNNk_RnNZkyjCJOrXqjh42MEMZDmZrPbWK6Nh5zwfw'
+            image_url : 'https://lh3.googleusercontent.com/proxy/O0gdtgbbL1_AI9IOibismKoPz-tgZOt1tRpuY4HvXsTh1_iXshi2dlt8A496ktxq_pCwtlmgIVXWBNNk_RnNZkyjCJOrXqjh42MEMZDmZrPbWK6Nh5zwfw'
           },
           success: function (msg) {
             alert(msg);
