--- a/demos/kakaoTest0.html
+++ b/demos/kakaoTest0.html
@@ -16,7 +16,7 @@
         Kakao.API.request({
           url: '/v2/vision/face/detect',
           data: {
-            image_url : 'https://lh3.googleusercontent.com/proxy/O0gdtgbbL1_AI9IOibismKoPz-tgZOt1tRpuY4HvXsTh1_iXshi2dlt8A496ktxq_pCwtlmgIVXWBNNk_RnNZkyjCJOrXqjh42MEMZDmZrPbWK6Nh5zwfw'
+            image_url : "https://lh3.googleusercontent.com/proxy/O0gdtgbbL1_AI9IOibismKoPz-tgZOt1tRpuY4HvXsTh1_iXshi2dlt8A496ktxq_pCwtlmgIVXWBNNk_RnNZkyjCJOrXqjh42MEMZDmZrPbWK6Nh5zwfw"
           },
           success: function (msg) {
             alert(msg);
