--- a/demos/OCR_DEMO0.html
+++ b/demos/OCR_DEMO0.html
@@ -15,7 +15,7 @@
 		<br/><br/>
 		<progress id="progressbar" min="0" max="1" value="0"/>
     </body>
-	<script src='https://unpkg.com/tesseract.js@v2.0.0-alpha.13/dist/tesseract.min.js'></script>
+	<script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>
     <script>
         document.addEventListener('DOMContentLoaded', function(){
             var input_image = document.getElementById('input_image');
